<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
		<ListView  
		android:id="@android:id/list"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:drawSelectorOnTop="true"
    android:divider="#000000"
    android:dividerHeight="2dip"
    android:listSelector="@drawable/selector"
    />
    
    <SlidingDrawer android:id="@+id/priorities"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="horizontal"
     android:handle="@+id/handle"
     android:content="@+id/pane"
     >

     <ImageView
         android:id="@id/handle"
         android:layout_width="3dip"
         android:layout_height="0dip"
         />

     <LinearLayout android:id="@id/pane"
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:background="#CC000000"
		    >
		    
		    <TextView
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
		    	android:paddingLeft="105dip"
			    android:text="@string/fun"
			    android:textStyle="bold"
			    android:textSize="23dip"
			  ></TextView>  
		    <SeekBar android:id="@+id/fun"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:thumb="@drawable/fun"
		    	android:paddingRight="23dip"
		    	android:paddingLeft="80dip"
		    	android:paddingBottom="23dip"
					android:progress="0"
			    android:max="5"
			    android:tag="fun"
		    ></SeekBar>
		    
		    <TextView
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
		    	android:paddingLeft="105dip"
			    android:text="@string/eco"
			    android:textStyle="bold"
			    android:textSize="23dip"
			  ></TextView>  
		    <SeekBar android:id="@+id/eco"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:thumb="@drawable/eco"
		    	android:paddingLeft="80dip"
		    	android:paddingBottom="23dip"
		    	android:paddingRight="23dip"
					android:progress="0"
			    android:max="5"
			    android:tag="eco"
		    ></SeekBar>
		    <TextView
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
		    	android:paddingLeft="105dip"
			    android:text="@string/fast"
			    android:textStyle="bold"
			    android:textSize="23dip"
			  ></TextView>  
		    <SeekBar android:id="@+id/fast"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:thumb="@drawable/fast"
		    	android:paddingLeft="80dip"
		    	android:paddingBottom="23dip"
		    	android:paddingRight="23dip"
					android:progress="0"
			    android:max="5"
			    android:tag="fast"
		    ></SeekBar>
		    <TextView
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
		    	android:paddingLeft="105dip"
			    android:text="@string/green"
			    android:textStyle="bold"
			    android:textSize="23dip"
			  ></TextView>  
		    <SeekBar android:id="@+id/green"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:thumb="@drawable/green"
		    	android:paddingLeft="80dip"
		    	android:paddingBottom="23dip"
		    	android:paddingRight="23dip"
					android:progress="0"
			    android:max="5"
			    android:tag="green"
		    ></SeekBar>
		    <TextView
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
		    	android:paddingLeft="105dip"
			    android:text="@string/social"
			    android:textStyle="bold"
			    android:textSize="23dip"
			  ></TextView>  
		    <SeekBar android:id="@+id/social"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:thumb="@drawable/social"
		    	android:paddingLeft="80dip"
		    	android:paddingBottom="23dip"
		    	android:paddingRight="23dip"
					android:progress="0"
			    android:max="5"
			    android:tag="social"
		    ></SeekBar>
		    
		    <ImageButton
		    	android:id="@+id/close"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/close"
		    />

			</LinearLayout>


 </SlidingDrawer>
</FrameLayout>
